huge fixes
add custom scrollbar, fix table colors, etc.

--- a/dark-theme-moses-tub.user.css
+++ b/dark-theme-moses-tub.user.css
@@ -6,7 +6,7 @@
 @author       B4rtware (https://github.com/B4rtware), Re-Krass (https://github.com/Re-Krass)
 @homepageURL  https://github.com/Re-Krass/Dark-Theme-ISIS-TUB
 @updateURL    https://raw.githubusercontent.com/Re-Krass/Dark-Theme-ISIS-TUB/master/dark-theme-moses-tub.user.css
-@version      0.0.3
+@version      0.1.0
 ==/UserStyle== */
 }
 
@@ -48,7 +48,9 @@
 	h6 small {
 		color: var(--main-white) !important;
 	}
-
+	div {
+		color: var(--main-white);
+	}
 	p {
 		color: var(--main-white);
 	}
@@ -76,17 +78,127 @@
 		background-attachment: scroll !important;
 		background-size: auto !important;
 	}
-	.fa-space {
+	html {
+		/* scrollbar firefox */
+		scrollbar-color: rgb(1, 1, 1) rgb(110, 110, 110);
+	}
+	span {
 		color: var(--main-white);
 	}
-
 	label {
 		color: var(--main-white);
 	}
+	tbody, tr, td {
+		color: var(--main-white);
+	}
+	#j_idt97\3a j_idt99\3a j_idt100 {
+		background-color: var(--main-navs-color)!important;
+	}
+	.logout-button {
+		background-color: var(--main-bg-color)!important;
+	}
+	.fa, .fa-fw {
+		color: var(--main-white)!important;
+	}
+	.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+		background-color: rgba(255, 60, 78, 0.4);
+	}
+	.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+		/* active elements */
+		background-color: rgba(255, 60, 78, 0.4);
+		/* 		color: var(--main-bg-color)!important */
+		/* 		background-color: transparent; */
+		/* 		border: 1px var(--main-red-tu) solid!important ; */
+	}
+	.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+		text-shadow: none;
+	}
+	.ui-selectonemenu-label, .ui-inputfield, .ui-corner-all {
+		/* dropdown menu */
+		background-color: var(--main-navs-color)!important;
+		border: none;
+		color: var(--main-white-muted);
+	}
+	.ui-state-hover {
+		/* hover over dropdown item */
+		color: var(--main-white)!important;
+	}
+	/* FIXME: change color of dropdown arrow */
+	/* 	.ui-selectonemenu-trigger { */
+	/* dropdown menu arrow */
+	/* 		background-color: var(--main-navs-color)!important; */
+	/* 	} */
 	.btn, .btn-default {
 		background-color: var(--main-navs-color)!important;
 		border-radius: 0!important;
 	}
+
+	.ui-treetable.ui-widget {
+		background-color: var(--main-bg-color)!important;
+	}
+	.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+		background-image: none!important;
+		background-color: var(--main-navs-color)!important;
+		border: none!important;
+	}
+	.ui-column-title {
+		/* 		background-color: var(--main-bg-color)!important; */
+	}
+	thead {
+		/* table header */
+		background-color: var(--main-navs-color)!important;
+	}
+	tr {
+		/* table row */
+		background-color: var(--main-navs-color);
+	}
+	/* 	tr:nth-child(odd) { */
+	/* table row odd */
+	/* 		background-color: var(--main-bg-color); */
+	/* 	} */
+	th {
+		/* table header */
+		color: var(--main-white);
+		background-color: var(--main-bg-color)!important;
+	}
+	td span {
+		/* table text */
+		color: var(--main-white)!important;
+	}
+	ui-treetable-toggler.ui-icon, .ui-tree-toggler {
+		/* dropdown icon */
+		filter: invert(100%);
+	}
+	td {
+		background-color: var(--main-bg-color);
+	}
+
+	.ui-widget-content.ui-treetable-selectable-node.default > td {
+		/* table text right */
+		background-color: var(--main-navs-color);
+		color: var(--main-white);
+	}
+	.ui-state-default span, .ui-state-default.ui-sortable-column span, .ui-state-default.ui-sortable-column span span {
+		/* table header */
+/* 		color: var(--main-bg-color)!important; */
+	}
+	.alert, .ui-state-default.ui-sortable-column .alert.alert-warning, .alert-warning {
+		background-color: transparent!important;
+		border-color: var(--main-red-tu);
+	}
+	.panel-heading {
+		background-color: var(--main-navs-color)!important;
+		color: var(--main-white)!important;
+	}
+	span > span.ui-treenode-label.ui-corner-all {
+		color: var(--main-white)!important; 
+	}
+	.panel-footer, div.panel-footer > table > tbody > tr > td {
+		background-color: var(--main-navs-color)!important;
+		color: var(--main-white)!important;
+	}
+	
+
 	.table.table-striped tbody tr {
 		/* table row */
 		background-color: var(--main-navs-color);
@@ -105,15 +217,57 @@
 	}
 	.btn.btn-default.btn-sm {
 		background-color: var(--main-bg-color)!important;
-		border: 1px rgb(60,60,60) solid;
+		border: 1px rgb(60, 60, 60) solid;
 	}
-/* 	.table.table-striped tbody tr:nth-child(odd) .btn.btn-default.btn-sm {
+	.ui-state-default.ui-resizable-column > span {
+		/* table header */
+		color: var(--main-bg-color);
+	}
+	/* 	.table.table-striped tbody tr:nth-child(odd) .btn.btn-default.btn-sm {
 		background-color: var(--main-navs-color)!important;
 	} */
+	#j_idt101 .col-xs-12 > span > table > tbody > tr, #j_idt101 .col-xs-12 > table > tbody > tr {
+		/* search page normal tables */
+		background-color: transparent!important;
+	}
 	.fa.fa-search.fa-fw {
 		/* magnifying glass */
-		color: var(--main-red-tu)!important;
+		color: var(--main-white)!important;
 	}
+	.col-xs-12 .panel.panel-default {
+		/* tables */
+		background-color: var(--main-navs-color)!important;
+	}
+
+	/* own scrollbar */
+	/* Note: The -webkit-scrollbar is not supported by Firefox or IE and Edge. */
+	::-webkit-scrollbar {
+		/* width */
+		width: 12px;
+	}
+	
+	::-webkit-scrollbar-track {
+		/* Track */
+		box-shadow: inset 0 0 5px grey;
+		border-radius: 8px;
+	}
+	::-webkit-scrollbar-thumb {
+		/* Handle */
+		background: rgb(110, 110, 110);
+		border-radius: 10px;
+	}
+	::-webkit-scrollbar-thumb:hover {
+		/* Handle on hover */
+		background: rgb(110, 110, 110);
+	}
+	::-webkit-scrollbar-track-piece {
+		/* not handle on */
+		background: rgb(1, 1, 1);
+	}
+	
+	
+	
+
 }
 
 @-moz-document regexp(".*moseskonto.tu-berlin.de.*") {
@@ -176,6 +330,21 @@
 		/* info box */
 		background-color: var(--main-navs-color);
 	}
+	
+	
+	/* calendar */
+	.moses-calendar-event {
+		background-color: var(--main-navs-color)!important;
+	}
+	.popover.fade.top.in {
+		background-color: var(--main-navs-color)!important;
+	}
+	.popover.fade.top.in .popover-title {
+		background-color: var(--main-navs-color)!important;
+	}
+	.popover.fade.top.in .popover-content {
+		color: var(--main-white)!important;
+	}
 }
 
 @-moz-document regexp(".*moseskonto.tu-berlin.de.*") {
@@ -204,3 +373,4 @@
 		color: var(--main-white);
 	}
 }
+
